--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/shuding/nextra-docs-template#readme",
   "dependencies": {
+    "@vercel/analytics": "^0.1.9",
     "flexsearch": "^0.7.31",
     "next": "^13.0.6",
     "nextjs": "^0.0.3",
